# blaze

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs
.github/workflows/: CICD.yaml
assets/logo/: info.txt
completions/: _blaze  _blaze.ps1  blaze.bash  blaze.fish
docs/: build_from_source.md  usage.md
man/: blaze.1
src/: dependencies.rs  lib.rs  utils.rs
