[package]
name = "blaze"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
description = "A Minimal And Fast NodeJS Package Manager Written In Rust"
authors = ["Humble Penguin <humblepenguinoffical@gmail.com>"]
repository = "https://github.com/humblepenguinn/blaze/"
license = "MIT/Apache-2.0"
readme = "README.md"


[dependencies]
async-recursion = "1.0.4"
bincode = "1.3.3"
chrono = { version = "0.4.20", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
dirs = "5.0.1"
flate2 = "1.0.26"
indicatif = "0.17.5"
inquire = "0.6.2"
semver = "1.0.18"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tar = "0.4.39"
tokio = { version = "1.29.1", features= ["full"] }

[lib]
name = "blaze"
path = "src/lib.rs"

[dependencies.reqwest]
version = "0.11.18"
default-features = false
features = ["rustls-tls-native-roots"]

[build-dependencies]
chrono = "0.4.20"
clap = { version = "4.1.8", features = ["derive"] }
clap_mangen = "0.2.9"
clap_complete = "4.2.1"
